2013-01-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c: If necessary define or declare strndup().

	* XeTeXFontMgr.cpp, XeTeXLayoutInterface.cpp: Drop definition
	of M_PI here ...
	* trans.h: ... and '#define M_PI' here immediately after
	'#include <math.h>'.

	* XeTeX_ext.c: Print the Graphite2 version (from Akira).

2013-01-04  Khaled Hosny  <khaledhosny@eglug.org>

	Merge changes from XeTeX repository.

2013-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c: Use xcalloc() and strncpy() instead of strndup()
	because there are systems without it, e.g., MinGW.
	* xetex.h: Include "XeTeXOTMath.h" (protos for xetex.web).
	* am/xetex.am: Drop obsolete files from XeTeX change file merge.

2013-01-03  Khaled Hosny  <khaledhosny@eglug.org>

	Merge changes from XeTeX repository.

2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (xetex_version.h): Enable silent rules.

2012-11-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Merge the XeTeX change files.
	* xetex.ch: Moved most from here ...
	* xetex-hz.ch (removed): ... and all from here ...
	* xetex-latex3.ch (removed): ... and here ...
	* xetex.web: ... and the results of merging ../tex.web with
	../etexdir/etex.ch into this new file.
	* tex.ch0 (new): Glue between xetex.web and ../tex.ch.
	* am/xetex.am: Adapted to the new layout.

2012-10-22  Khaled Hosny  <khaledhosny@eglug.org>

	* XeTeXFontInst.cpp, XeTeXOTMath.cpp, XeTeXOTMath.h, XeTeX_ext.c,
	XeTeX_ext.h, xetex.ch, xetex.h: Merge changes from XeTeX repository.

2012-09-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c (open_dvi_output): sync with W32TeX. On Windows,
	use $SELFAUTOLOC/xdvipdfmx.exe as a driver for security reason.
	Otherwise a malicious xdvipdfmx.bat in the current directory can
	be called.

2012-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Use Automake generated rule for ObjC++ file,
	it is no longer necessary to build a separate libxetexmm.a.